# motoman_project

./: .indigo_depends.rosinstall  .kinect_depends.rosinstall  .pre_process.sh  .travis.yml  README.md  dependencies.rosinstall
motion_planning/: CMakeLists.txt
motion_planning/launch/: initialization.launch
motion_planning/msg/: Servo_move.msg
motion_planning/src/: demo_teaching.cpp  demo_teaching_single.cpp  moving.cpp  single_target.cpp
motoman_control/: CMakeLists.txt  package.xml
motoman_demo/: CMakeLists.txt  package.xml
motoman_description/: CMakeLists.txt  package.xml
motoman_gazebo/: CMakeLists.txt  package.xml
motoman_gripper/: CMakeLists.txt  package.xml
motoman_moveit/: CMakeLists.txt  package.xml
motoman_moveit/database/: opt_sample_num.py
motoman_moveit/launch/: run_benchmark_sia5_ompl.launch  sia5_gazebo_nishida_lab_moveit_planning_execution.launch
motoman_moveit/scene/: picking_problem.scene  shelf_problem.scene  tonnel_problem.scene  wall_problem.scene
motoman_moveit/src/: move_group_plan_single_target.cpp
motoman_moveit_config/launch/: moveit_planning_execution.launch  warehouse.launch
motoman_recognition/motoman_cable_removal/: CMakeLists.txt  package.xml
motoman_recognition/motoman_euclidean_cluster/: CMakeLists.txt  package.xml
motoman_rviz_plugins/: CMakeLists.txt  package.xml
motoman_sia5_moveit_config/: CMakeLists.txt  package.xml
motoman_sia5_moveit_config/launch/: demo.launch  (+3 more)
motoman_sia5_moveit_plugins/: CMakeLists.txt  package.xml
motoman_viz/: CMakeLists.txt  package.xml
scripts/: run_extrinsic_calib.py
(+23 files in other folders)
